# terbium

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  ROADMAP.md  ai-and-routing.md  catalog.md  confidence.md  formats.md  images.md  index.html  quickstart.md  schemas.md
eval/: category_bench.py
examples/: furniture_catalogue.py
src/terbium/: __init__.py  api.py  catalog.py  cli.py  export_feed.py  extract.py  normalize.py
src/terbium/documents/: __init__.py  base.py  csv_adapter.py  pdf.py  pptx_adapter.py  xlsx_adapter.py
src/terbium/harness/: __init__.py  ai.py  arrange.py  catalog_ai.py  escalation.py  product_ai.py  router.py  vision.py
src/terbium/harness/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py
src/terbium/layout/: __init__.py  columns.py  confidence.py  dehead.py  grid.py  images.py  labels.py  lines.py  ocr.py  signals.py  tables.py
src/terbium/model/: __init__.py  document.py  elements.py  record.py  table.py
src/terbium/schema/: __init__.py  base.py  furniture.py  generic.py  product.py
tests/: test_smoke.py
